styles/actor/npc.css
.npc.sheet {
	min-width: 350px;
}

.everyday-heroes.npc.sheet {
	[data-tab="details"] [data-action]:not([data-type="activate"]):not([data-type="edit"]) {
		text-decoration: underline;
		text-decoration-color: var(--eh-text-color-underline);
		text-decoration-style: dashed;
	}

	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
	/*  Header                                   */
	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */

	form > header {
		fieldset.cr input {
			width: 2.5em;
			padding-inline: 0;
			text-align: center;
		}

		nav {
			flex: 1 0 100%;
			display: flex;
			margin-inline: -0.5em;
			margin-block-end: -0.5em;
			border-top: 1px solid var(--eh-border-color-weak);

			a {
				flex-grow: 1;
				padding-inline: 0.5em;
				padding-block: 0.35em;
				text-align: center;

				&.active {
					background-color: var(--eh-background-color-dark);
					color: var(--eh-text-color-white);
				}
				&:first-of-type { padding-inline-start: 1em; }
				&:last-of-type { padding-inline-end: 1em; }
				&:not(:last-of-type) { border-inline-end: 1px solid var(--eh-border-color-weak); }
				&[data-action="toggle-editing-mode"] {
					flex: 0 0 3em;
					padding-inline-start: 0.75em;
				}
			}
		}
	}

	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
	/*  Attributes                               */
	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */

	[data-tab="details"] > section {
		overflow: clip;
		margin-block-start: 0.5em;
		border: 1px solid var(--eh-border-color-strong);
		border-radius: 10px;
		padding: 0.5em;
		background-color: var(--eh-background-color-light);

		> fieldset {
			display: flex;
			align-items: first baseline;
			gap: 0.5em;

			&:not(:last-of-type) { margin-block-end: 0.25em; }
			&:not(.abilities) {
				> input {
					flex: 0 0 5em;
					width: unset;
					&[name="system.attributes.hp.value"] { text-align: end; }
				}
				> select {
					flex: 0 0 10em;
					width: unset;
				}
			}
		}

		&.attributes > fieldset > ul {
			display: flex;
			flex-wrap: wrap;
			gap: 0.5em;
			list-style: none;
			margin: 0;
			padding: 0;
		}

		> fieldset.abilities {
			margin-inline: -0.25em;
			border: 3px double var(--eh-border-color-weak);
			padding: 0.25em;

			> div {
				flex: 1 1;
				display: flex;
				flex-wrap: wrap;
				align-items: first baseline;
				justify-content: center;
				gap: 0 0.25em;

				label {
					flex: 1 0 100%;
					text-align: center;
					font-weight: bold;
					text-transform: uppercase;
				}
				input {
					text-align: center;
					padding: 0;
				}
				[data-action="cycle-proficiency"] {
					flex-basis: 100%;
				}
			}
		}
	}

	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
	/*  Actions                                  */
	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */

	[data-tab="details"] > section.actions > fieldset {
		display: block;

		p { display: inline; }
		label span {
			font-style: italic;
			text-transform: none;
		}
	}

	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
	/*  Inventory                                */
	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */

	[data-tab="inventory"] > section:first-child {
		margin-block-start: 0.5em;

		.item > * {
			font-size: var(--font-size-12);
		}
		.item > .item-modes figure {
			width: 1.25em;
			height: 1.25em;
		}
		.item > div {
			display: flex;
			flex-wrap: wrap;
			gap: 0 0.25em;
			justify-content: space-between;
		}
	}

	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
	/*  Biography                                */
	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */

	[data-tab="biography"] > section {
		margin-block-start: 0.5em;

		.editor {
			min-height: 30em;
			.editor-edit { z-index: 1; }

			&.prosemirror {
				margin: -0.5em;
				max-width: unset;
				max-height: unset;
			}
		}
	}

	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
	/*  Effects                                */
	/* ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */

	[data-tab="effects"] > section:first-child {
		margin-block-start: 0.5em;
	}
}

